--- a/centreon/www/front_src/src/styles/partials/_variables.scss
+++ b/centreon/www/front_src/src/styles/partials/_variables.scss
@@ -2,19 +2,21 @@
 $white-color: #ffffff;
 $black-color: #000000;
 
-$lime-centreon-primary: #84BD00;
-$green-centreon-primary: #43B02A;
-$turquoise-centreon-primary: #00A499;
-$lightblue-centreon-primary: #009FDF;
-$blue-centreon-primary: #0072CE;
-$darkblue-centreon-primary: #10069F;
+$lime-centreon-primary: rgba(132, 189, 0, 1);
+$green-centreon-primary: rgba(67, 176, 42, 1);
+$turquoise-centreon-primary: rgba(0, 164, 153, 1);
+$lightblue-centreon-primary: rgba(0, 159, 223, 1);
+$blue-centreon-primary: rgba(0, 114, 206, 1);
+$darkblue-centreon-primary: rgba(16, 6, 159, 1);
+$orange-centreon-primary: rgb(255, 153, 19);
 
-$lime-centreon-darken: #597F00;
-$green-centreon-darken: #27651A;
-$turquoise-centreon-darken: #007F77;
-$lightblue-centreon-darken: #005A7F;
-$blue-centreon-darken: #064166;
-$darkblue-centreon-darken: #09225C;
+$lime-centreon-darken: rgba(89, 127, 0, 1);
+$green-centreon-darken: rgba(39, 101, 26, 1);
+$turquoise-centreon-darken: rgba(0, 127, 119, 1);
+$lightblue-centreon-darken: rgba(0, 90, 127, 1);
+$blue-centreon-darken: rgba(6, 65, 102, 1);
+$darkblue-centreon-darken: rgba(9, 34, 92, 1);
+$orange-centreon-darken:  rgb(198, 112, 0);
 
 $success-color: #20a11c;
 $notification-color: #fffeec;
