--- a/centreon/www/front_src/src/styles/partials/_side-nav.scss
+++ b/centreon/www/front_src/src/styles/partials/_side-nav.scss
@@ -137,7 +137,7 @@ a {
       }
       &.active {
         > a {
-          background: $turquoise-centreon-darken;
+          background: $turquoise-centreon-primary;
         }
       }
     }
@@ -148,7 +148,7 @@ a {
       }
       &.active {
         > a {
-          background: $lime-centreon-darken;
+          background: $lime-centreon-primary;
         }
       }
     }
@@ -159,7 +159,7 @@ a {
       }
       &.active {
         > a {
-          background: $orange-centreon-darken;
+          background: $orange-centreon-primary;
         }
       }
     }
@@ -170,7 +170,7 @@ a {
       }
       &.active {
         > a {
-          background: $lightblue-centreon-darken;
+          background: $lightblue-centreon-primary;
         }
       }
     }
@@ -181,7 +181,7 @@ a {
       }
       &.active {
         > a {
-          background: $darkblue-centreon-darken;
+          background: $darkblue-centreon-primary;
         }
       }
     }
