--- a/centreon/www/front_src/src/styles/partials/_variables.scss
+++ b/centreon/www/front_src/src/styles/partials/_variables.scss
@@ -8,15 +8,15 @@ $turquoise-centreon-primary: rgba(0, 164, 153, 1);
 $lightblue-centreon-primary: rgba(0, 159, 223, 1);
 $blue-centreon-primary: rgba(0, 114, 206, 1);
 $darkblue-centreon-primary: rgba(16, 6, 159, 1);
-$orange-centreon-primary: rgb(255, 153, 19);
+$orange-centreon-primary: rgba(255, 153, 19, 1);
 
 $lime-centreon-darken: rgba(89, 127, 0, 1);
 $green-centreon-darken: rgba(39, 101, 26, 1);
 $turquoise-centreon-darken: rgba(0, 127, 119, 1);
 $lightblue-centreon-darken: rgba(0, 90, 127, 1);
 $blue-centreon-darken: rgba(6, 65, 102, 1);
-$darkblue-centreon-darken: rgba(9, 34, 92, 1);
-$orange-centreon-darken:  rgb(198, 112, 0);
+$darkblue-centreon-darken: rgba(32, 53, 126, 1);
+$orange-centreon-darken:  rgba(198, 112, 0, 1);
 
 $success-color: #20a11c;
 $notification-color: #fffeec;
