Header and side nav adopting and fixes

--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -2,6 +2,7 @@
 @import "partials/variables";
 @import "partials/icons";
 @import "partials/header";
+@import "partials/footer";
 @import "partials/side-nav";
 @import "partials/buttons";
 @import "partials/form/form";
