--- a/centreon/www/front_src/src/styles/partials/_progress-bar.scss
+++ b/centreon/www/front_src/src/styles/partials/_progress-bar.scss
@@ -39,8 +39,7 @@
     line-height: 33px;
     text-align: center;
     border: 1px solid #cdcdcd;
-    font-family: $primary-font;
-    font-weight: $font-light;
+    font-family: $primary-font-light;
     font-size: 0.75rem;
     color: #cdcdcd;
     box-sizing: border-box;
