--- a/centreon/www/front_src/src/styles/partials/_variables.scss
+++ b/centreon/www/front_src/src/styles/partials/_variables.scss
@@ -25,10 +25,7 @@ $warning-color: #ffdce0;
 $danger-color: #d0021b;
 
 /* Fonts */
-$primary-font: "Roboto", sans-serif;
-
-$font-light: 300;
-$font-regular: 400;
-$font-semi-bold: 500;
-$font-bold: 600;
-$font-extra-bold: 700; 
+$primary-font-light: "Roboto Light";
+$primary-font-regular: "Roboto Regular";
+$primary-font-medium: "Roboto Medium";
+$primary-font-bold: "Roboto Bold";
