--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -1,4 +1,5 @@
 @import "partials/typography";
+@import "partials/fonts";
 @import "partials/variables";
 @import "partials/icons";
 @import "partials/header";
