--- a/centreon/www/front_src/src/styles/partials/_footer.scss
+++ b/centreon/www/front_src/src/styles/partials/_footer.scss
@@ -15,8 +15,7 @@
     height: 100%;
     span {
       color: $white-color;
-      font-family: $primary-font;
-      font-weight: $font-light;
+      font-family: $primary-font-light;
       font-size: 0.75rem;
     }
   }
@@ -25,7 +24,7 @@
       display: inline-block;
       padding-right: 40px;
       position: relative;
-      font-family: $primary-font;
+      font-family: $primary-font-regular;
       font-size: 0.75rem;
       &:after {
         position: absolute;
@@ -47,4 +46,17 @@
 }
 .sidebar.active + #content .footer {
   left: 160px;
+}
+.full-screen {
+  position: fixed;
+  right: 10px;
+  border-radius: 4px;
+  background: url("./img/icons/icon-full-screen.png") no-repeat center center;
+  background-size: cover;
+  cursor: pointer;
+  z-index: 99;
+  bottom: 14px;
+  width: 38px;
+  height: 32px;
+  display: inline-block;
 }
