--- a/centreon/www/front_src/src/styles/partials/_footer.scss
+++ b/centreon/www/front_src/src/styles/partials/_footer.scss
@@ -37,6 +37,7 @@
         color: $white-color;
       }
       &:last-child {
+        padding: 0;
         &:after {
           content: none;
         }
