fix(ui): add favicon + fullscreen + hide header menu on outside click (#6641)
* feat(export): add default local poller data for broker info

* last(feedback) on poller wizard steps

* Header and side nav fixes. New User submenu added.

* feat(export): add default local poller data for resource

* Header and side nav adopting and fixes

* Small fix

* Full screen functinality implemented. Layout fixes. Generated font implemented.

* Full screen functionality

* Layout fixes

* Favicon fix.

* debug(header) :: adding global click to close dropdowns

--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -1,7 +1,9 @@
 @import "partials/typography";
+@import "partials/fonts";
 @import "partials/variables";
 @import "partials/icons";
 @import "partials/header";
+@import "partials/footer";
 @import "partials/side-nav";
 @import "partials/buttons";
 @import "partials/form/form";
