--- a/centreon/www/front_src/src/styles/partials/_side-nav.scss
+++ b/centreon/www/front_src/src/styles/partials/_side-nav.scss
@@ -8,40 +8,81 @@
 }
 
 .sidebar {
-  min-width: 160px;
-  max-width: 160px;
+  min-width: 45px;
+  max-width: 45px;
+  text-align: center;
   background: #e0e0e0;
-  transition: all 0.3s;
-  overflow-y: auto;
-  height: 100vh;
-  &.active {
-    min-width: 45px;
-    max-width: 45px;
-    text-align: center;
-    .sidebar-logo {
-      display: none;
+  transition: all 0.2s;
+  .sidebar-logo {
+    display: none;
+  }
+  .menu-item-name {
+    display: none;
+  }
+  .collapsed-items {
+    display: none;
+  }
+  .toggle-sidebar-wrap {
+    width: 45px;
+  }
+  .toggle-sidebar {
+    &-wrap {
+      background: #fff;
+      width: 45px;
+      height: 30px;
+      position: fixed;
+      bottom: 0;
+      transition: all .2s;
     }
-    .sidebar-logo-mini {
+    &-icon {
+      background: url("./img/icons/aside-menu-toggle-arrow.png") no-repeat center center;
+      transform: rotateY(180deg);
+      height: 30px;
+      display: inline-block;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      cursor: pointer;
+      width: 100%;
+      transition: all .2s;
+    }
+  }
+
+  &.active {
+    min-width: 160px;
+    max-width: 160px;
+    .sidebar-logo {
       display: block;
     }
-    .menu-item-name {
+    .sidebar-logo-mini {
       display: none;
+    }
+    .menu-item-name {
+      display: inline-block;
     }
     .collapsed-items {
-      display: none;
+      display: block;
     }
-    .toggle-sidebar {
-      transform: rotateY(180deg)
+    .toggle-sidebar-wrap {
+      width: 160px;
+    }
+    .toggle-sidebar-icon {
+      transform: none;
+      background-position: 90% center;
     }
   }
   .sidebar-logo-mini {
-    display: none;
-    padding: 12px 11px;
+    padding: 16px 11px;
     box-sizing: border-box;
+    height: 51px;
   }
   &-logo {
-    padding: 7px 12px;
+    padding: 10px 12px;
     box-sizing: border-box;
+    height: 51px;
+    a {
+      display: block;
+    }
     &-image {
       max-width: 100%;
       height: auto;
@@ -73,19 +114,11 @@
       margin-right: 6px;
     }
   }
-  .toggle-sidebar {
-    background: url("./img/icons/aside-menu-toggle-arrow.png") no-repeat center center;
-    width: 45px;
-    height: 45px;
-    display: inline-block;
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-    cursor: pointer;
-  }
   &-inner {
     position: relative;
-    padding-bottom: 50px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 100vh;
   }
 }
 
@@ -115,6 +148,7 @@ a {
   &-items {
     &.components {
       border-top: 1px solid $white-color;
+      padding-bottom: 30px;
     }
   }
   &-item {
@@ -123,6 +157,7 @@ a {
       text-align: left;
       text-decoration: none;
       display: block;
+      position: relative;
       &:hover {
         color: $white-color;
       }
@@ -140,6 +175,21 @@ a {
       > a:hover {
         background: $turquoise-centreon-darken;
       }
+      .collapsed-level-item {
+        &.active {
+          .collapsed-level-item-link {
+            background: $turquoise-centreon-primary;
+            color: $white-color;
+          }
+          
+        }
+        &:hover {
+          .collapsed-level-item-link {
+            background: $turquoise-centreon-darken;
+            color: $white-color;
+          }
+        }
+      }
     }
 
     &:nth-child(2) {
@@ -150,6 +200,20 @@ a {
       }
       > a:hover {
         background: $lime-centreon-darken;
+      }
+      .collapsed-level-item {
+        &.active {
+          .collapsed-level-item-link {
+            background: $lime-centreon-primary;
+            color: $white-color;
+          }
+        }
+        &:hover {
+          .collapsed-level-item-link {
+            background: $lime-centreon-darken;
+            color: $white-color;
+          }
+        }
       }
     }
 
@@ -162,6 +226,20 @@ a {
       > a:hover {
         background: $orange-centreon-darken;
       }
+      .collapsed-level-item {
+        &.active {
+          .collapsed-level-item-link {
+            background: $orange-centreon-primary;
+            color: $white-color;
+          }
+        }
+        &:hover {
+          .collapsed-level-item-link {
+            background: $orange-centreon-darken;
+            color: $white-color;
+          }
+        }
+      }
     }
 
     &:nth-child(4) {
@@ -173,6 +251,20 @@ a {
       > a:hover {
         background: $lightblue-centreon-darken;
       }
+      .collapsed-level-item {
+        &.active {
+          .collapsed-level-item-link {
+            background: $lightblue-centreon-primary;
+            color: $white-color;
+          }
+        }
+        &:hover {
+          .collapsed-level-item-link {
+            background: $lightblue-centreon-darken;
+            color: $white-color;
+          }
+        }
+      }
     }
 
     &:nth-child(5) {
@@ -183,6 +275,20 @@ a {
       }
       > a:hover {
         background: $darkblue-centreon-darken;
+      }
+      .collapsed-level-item {
+        &.active {
+          .collapsed-level-item-link {
+            background: $darkblue-centreon-primary;
+            color: $white-color;
+          }
+        }
+        &:hover {
+          .collapsed-level-item-link {
+            background: $darkblue-centreon-darken;
+            color: $white-color;
+          }
+        }
       }
     }
 
@@ -196,9 +302,13 @@ a {
       }
     }
     &-name {
-      font-family: $primary-font;
+      font-family: $primary-font-regular;
       font-size: 0.75rem;
       vertical-align: middle;
+      position: absolute;
+      left: 41px;
+      transform: translateY(-50%);
+      top: 50%;
     }
   }
 }
@@ -212,8 +322,7 @@ a {
         text-decoration: none;
         font-size: 0.625rem;
         color: rgb(36,47,59);
-        font-family: $primary-font;
-        font-weight: $font-light;
+        font-family: $primary-font-light;
         padding: 10px 10px 11px 47px;
         display: block;
         letter-spacing: -0.4px;
@@ -222,13 +331,13 @@ a {
     }
     &-title {
       color: $lightblue-centreon-primary;
-      font-family: $primary-font;
-      font-weight: $font-light;
+      font-family: $primary-font-light;
       font-size: 0.625rem;
       background-color: $white-color;
       display: block;
       padding: 3px 10px 3px 47px;
       border-bottom: 1px solid #f7f7f7;
+      text-align: left;
     }
   }
   .collapsed-item {
@@ -266,19 +375,13 @@ a {
   &-items {
     &.first-level {
       .collapsed-level-item {
-        &.active {
-          > .collapsed-level-item-link {
-            background-color: $lightblue-centreon-primary;
-            color: $white-color;
-          }
-        }
         background-color: $white-color;
         .collapsed-level-item-link {
           padding: 8px 10px 8px 47px;
-          &:hover {
-            color: $white-color;
-            background-color: #0a78a5;
-          }
+          // &:hover {
+          //   color: $white-color;
+          //   background-color: #0a78a5;
+          // }
         }
       }
     }
@@ -293,6 +396,7 @@ a {
   width: 100%;
   min-height: 100vh;
   transition: all 0.3s;
+  position: relative;
 }
 
 /* ---------------------------------------------------
