--- a/centreon/www/include/monitoring/recurrentDowntime/templates/general.html
+++ b/centreon/www/include/monitoring/recurrentDowntime/templates/general.html
@@ -16,7 +16,7 @@
 <script type="text/javascript">
 var firstGeneral = true;
 function selectPeriodType(type, period_id) {
-	jQuery("#subformperiod_"+period_id).load('./main.php?p={/literal}{$p}{literal}&min=1&iframe=1&period='+period_id+'&period_form='+type);
+	jQuery("#subformperiod_"+period_id).load('./main.get.php?p={/literal}{$p}{literal}&min=1&iframe=1&period='+period_id+'&period_form='+type);
 }
 
 jQuery(function() {
