Collapse functionality for second level menu

--- a/centreon/www/front_src/src/styles/partials/_side-nav.scss
+++ b/centreon/www/front_src/src/styles/partials/_side-nav.scss
@@ -397,6 +397,7 @@ a {
   min-height: 100vh;
   transition: all 0.3s;
   position: relative;
+  padding-bottom: 50px;
 }
 
 /* ---------------------------------------------------
