Fix for missing links in submenu

--- a/centreon/www/front_src/src/styles/partials/_header.scss
+++ b/centreon/www/front_src/src/styles/partials/_header.scss
@@ -378,6 +378,11 @@
         background-color: #818185;
       }
     }
+    &.gray-light {
+      &:before {
+        background-color: #cdcdcd;
+      }
+    }
     &.green {
       &:before {
         background-color: #87bd23;
