Add copied icon

--- a/centreon/www/front_src/src/styles/partials/_header.scss
+++ b/centreon/www/front_src/src/styles/partials/_header.scss
@@ -298,6 +298,10 @@
         position: absolute;
         right: 15px;
         top: 5px;
+        &.icon-copied {
+          -webkit-mask: url('./img/icons/icon-copied.svg');
+          mask: url('./img/icons/icon-copied.svg');
+        }
       }
       .submenu-bookmark-link {
         margin: 14px 9px 13px;
