fix(ui): fix global layout for better management of iframe (#6674)
Refs: MON-2846

--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -3,6 +3,7 @@
 @import "partials/variables";
 @import "partials/icons";
 @import "partials/header";
+@import "partials/content";
 @import "partials/footer";
 @import "partials/side-nav";
 @import "partials/buttons";
