--- a/centreon/www/front_src/src/styles/partials/_footer.scss
+++ b/centreon/www/front_src/src/styles/partials/_footer.scss
@@ -1,8 +1,5 @@
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 45px;
-  right: 0;
+  flex: none;
   padding: 0 100px 0 20px;
   box-sizing: border-box;
   background-color: #232f39;
