fix(ui): Fullscreen functionality fixes. IE compatibility fix. (#6692)
add package-lock

--- a/centreon/www/front_src/src/styles/partials/_header.scss
+++ b/centreon/www/front_src/src/styles/partials/_header.scss
@@ -218,7 +218,7 @@
     }
   }
   .submenu-top-button {
-    margin: 10px 16px;
+    margin: 10px 15px;
   }
 }
   .submenu {
@@ -415,4 +415,8 @@
       }
      }
   }
+}
+.FullScreen {
+  height: 100%;
+  background-color: $white-color;
 }
