fix(widget): Errors when saving preferences of widget (#6696)
Resolve MON-2868

--- a/centreon/www/include/home/customViews/widgetParam.html
+++ b/centreon/www/include/home/customViews/widgetParam.html
@@ -68,7 +68,7 @@
                 var error = response.getElementsByTagName('error');
                 if (typeof(view) != 'undefined') {
                     var viewId = view.item(0).firstChild.data;
-                    parent.jQuery(
+                    jQuery(
                         "[name=widget_" + viewId + "_" + widgetId + "]").attr('src', widgetUrl +
 						'?widgetId=' + widgetId + '&customViewId=' + viewId
 					);
