--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -2604,3 +2604,8 @@ ul.module_list {
 .ui-progressbar-value {
   background-color: #88b917 !important
 }
+
+.section-expand {
+  height: 100%;
+  margin-bottom: 40px;
+}
