MON-2883/Poller Statistics style improvements (#6708)

--- a/centreon/www/front_src/src/styles/partials/_header.scss
+++ b/centreon/www/front_src/src/styles/partials/_header.scss
@@ -420,3 +420,12 @@
   height: 100%;
   background-color: $white-color;
 }
+.submenu-top-item-link {
+  display: block;
+  padding: 0 !important;  
+  padding-left: 15px !important;
+  font-size: .8rem;
+  color: $white-color;
+  font-family: $primary-font-light;
+  margin-top: 10px;
+}
