fix(ux): the centreon message box hide part of a filter form (#6707)
Reslove MON-2885

--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -1258,6 +1258,9 @@ a.infobulle:hover   {z-index:25;}
     text-align:center;
     border-radius:4px;
 }
+#centreonMsg.react-centreon-message    {
+    top:10px;
+}
 
 
 div.uptodate,div.updateSecu,div.update,div.update_readme,div.update_output,div.graph_footer,div.left_menu {margin:3px;padding:3px;}
