Layout fixes/mon 2883 (#6712)
* MON-2883/Poller Statistics style improvements

* Small fix for submenu

--- a/centreon/www/front_src/src/styles/partials/_header.scss
+++ b/centreon/www/front_src/src/styles/partials/_header.scss
@@ -428,4 +428,7 @@
   color: $white-color;
   font-family: $primary-font-light;
   margin-top: 10px;
+  .submenu-top-count {
+    float: right;
+  }
 }
