Info for the poller states (#6713)

--- a/centreon/www/front_src/src/styles/partials/_header.scss
+++ b/centreon/www/front_src/src/styles/partials/_header.scss
@@ -428,7 +428,11 @@
   color: $white-color;
   font-family: $primary-font-light;
   margin-top: 10px;
+  padding-right: 25px !important;
+  position: relative;
   .submenu-top-count {
-    float: right;
+    position: absolute;
+    right: 10px;
+    top: 0;
   }
 }
