--- a/centreon/www/front_src/src/styles/partials/_header.scss
+++ b/centreon/www/front_src/src/styles/partials/_header.scss
@@ -262,7 +262,7 @@
         float: right;
       }
       .submenu-user-button {
-        font-size: .8rem;
+        font-size: .785rem;
         color: #ffa225;
         text-decoration: none;
         font-family: $primary-font-light;
@@ -271,36 +271,40 @@
         border-radius: 16px;
         border: 1px solid rgba(255, 161, 37, 1);
         background-color: transparent;
-        margin: 15px 0;
         margin: 0 auto;
         display: block;
-        width: 165px;
+        width: 150px;
         outline: none;
         position: relative;
-        padding: 0 42px 0 15px;
+        padding: 0 27px 0 10px;
         box-sizing: border-box;
         &:hover {
           color: rgb(0,9,22);
           background-color: rgba(255, 161, 37, 1);
-          .btn-logout-icon {
-            background-color: rgba(0, 9, 21, 1);
+          .btn-logout-icon, .icon-copied {
+            &:before {
+              color: rgba(0, 9, 21, 1);
+            }
           }
         }
       }
       .btn-logout-icon {
-        -webkit-mask: url('./img/icons/icon-copy.svg');
-        mask: url('./img/icons/icon-copy.svg') ;
-        -webkit-mask-size: cover;
-        mask-size: cover;
-        background-color: rgba(255, 161, 37, 1);
         width: 19px;
         height: 19px;
         position: absolute;
-        right: 15px;
+        right: 9px;
         top: 5px;
+        &:before {
+          content: "\e90d";
+          color: rgba(255, 161, 37, 1);
+          font-size: 19px;
+        }
         &.icon-copied {
-          -webkit-mask: url('./img/icons/icon-copied.svg');
-          mask: url('./img/icons/icon-copied.svg');
+          &:before {
+            content: "\e90c";
+            color: rgba(0, 9, 21, 1);
+            color: rgba(255, 161, 37, 1);
+          }
         }
       }
       .submenu-bookmark-link {
@@ -317,7 +321,6 @@
         margin-bottom: 10px;
       }
       .button-wrap {
-        padding-right: 9px;
         .btn {
           margin-top: 10px;
           float: right;
