fix(front): avoid global menu inception by handle click on a (#6729)
* apply change to global a links

* update for target blank

* fix(ui): manage all use cases to reidrect centreon links

* fix(ui): manage backbonejs links

* Revert "fix(ui): fix global menu inception (#6648)"

This reverts commit 7b976e724dccd54ae56ecc3133e12fbf5ddc4dbe.

* revert dollar sign to jQuery

--- a/centreon/www/include/views/graphs/graphs.html
+++ b/centreon/www/include/views/graphs/graphs.html
@@ -201,12 +201,12 @@ var tooManyChartMsg = "{t}You cannot add more charts. The maximum charts is {/t}
             <span>{{graphTitle}}</span>
             {/literal}
             {if $topologyAccess.2040101 || $admin == 1}
-            <a href="#" class="btc bt_info actions-simple" data-href="?p=2040101">
+            <a href="#" class="btc bt_info actions-simple" data-href="./main.php?p=2040101">
                 {t}Split chart{/t}
             </a>
             {/if}
             {if $topologyAccess.2040102 || $admin == 1}
-            <a href="#" class="btc bt_info actions-simple" data-href="?p=2040102">
+            <a href="#" class="btc bt_info actions-simple" data-href="./main.php?p=2040102">
                 {t}Display multiple periods{/t}
             </a>
             {/if}
