--- a/centreon/www/front_src/src/styles/partials/form/_form.scss
+++ b/centreon/www/front_src/src/styles/partials/form/_form.scss
@@ -78,9 +78,8 @@
   }
   &-title {
     font-size: 12px;
-    font-family: $primary-font-light;
+    font-family: $primary-font-medium;
     color: $lightblue-centreon-primary;
-    
   }
   &-text {
     font-size: 10px;
