--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -20,3 +20,16 @@ body {
   width: 100%;
   height: 100%;
 }
+.hidden {
+  display: none!important;
+}
+
+.hidden-input {
+  width: 0;
+  height: 0;
+  position: absolute;
+  opacity: 0;
+  width: 0px;
+  height: 0px;
+  top: -100px;
+}
