--- a/centreon/www/front_src/src/styles/partials/_loader.scss
+++ b/centreon/www/front_src/src/styles/partials/_loader.scss
@@ -1,3 +1,14 @@
+.main-loader {
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
 .loader {
   &-inner {
     @include clearfix();
