[UI] Buttons save and reset not totally visible in some forms at the bottom of the page (#6753)

--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -46,7 +46,7 @@ body {
     font-family: 'Open Sans', Arial, Tahoma, Helvetica, Sans-Serif;
     color:#555;
     font-size:11px;
-    height: 100%;
+    min-height: 100%;
 }
 .link a {
     font-size:12px;
