Acl functionality for routes (#6777)
* Acl functionality for routes

* Reformat code. Change indexOf to includes :)

--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -1,6 +1,7 @@
 @import "partials/typography";
 @import "partials/fonts";
 @import "partials/variables";
+@import "partials/messages";
 @import "partials/icons";
 @import "partials/header";
 @import "partials/content";
