--- a/centreon/www/Themes/Centreon-2/style.css
+++ b/centreon/www/Themes/Centreon-2/style.css
@@ -46,7 +46,7 @@ body {
     font-family: 'Open Sans', Arial, Tahoma, Helvetica, Sans-Serif;
     color:#555;
     font-size:11px;
-    min-height: 100%;
+    height: 100%;
 }
 .link a {
     font-size:12px;
@@ -2610,5 +2610,5 @@ ul.module_list {
 
 .section-expand {
   height: 100%;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
