fix(service graph): Fix blank page after click on double column icon (#6807)
Replace href by onclick

--- a/centreon/www/include/views/graphs/graph-split.html
+++ b/centreon/www/include/views/graphs/graph-split.html
@@ -38,10 +38,9 @@
                 <li data-interval="30m">{t}30 minutes{/t}</li>
             </ul>
         </div>
-        <a href="javascript:switchCols(1)" class="ico-16 margin_right ico-col ico-col-1 active" alt="{t}One column{/t}" title="{t}One column{/t}"></a>
-        <a href="javascript:switchCols(2)" class="ico-16 margin_right ico-col ico-col-2" alt="{t}Two columns{/t}" title="{t}Two columns{/t}"></a>
-        <a href="javascript:switchCols(3)" class="ico-16 margin_right ico-col ico-col-3" alt="{t}Three columns{/t}" title="{t}Three columns{/t}">
-        </a>
+        <a onclick="javascript:switchCols(1)" class="ico-16 margin_right ico-col ico-col-1 active" alt="{t}One column{/t}" title="{t}One column{/t}"></a>
+        <a onclick="javascript:switchCols(2)" class="ico-16 margin_right ico-col ico-col-2" alt="{t}Two columns{/t}" title="{t}Two columns{/t}"></a>
+        <a onclick="javascript:switchCols(3)" class="ico-16 margin_right ico-col ico-col-3" alt="{t}Three columns{/t}" title="{t}Three columns{/t}"></a>
     </div>
     <div>
         {$form.hidden}
