--- a/centreon/www/include/views/graphs/graphs.html
+++ b/centreon/www/include/views/graphs/graphs.html
@@ -201,20 +201,20 @@ var tooManyChartMsg = "{t}You cannot add more charts. The maximum charts is {/t}
             <span>{{graphTitle}}</span>
             {/literal}
             {if $topologyAccess.2040101 || $admin == 1}
-            <a href="#" class="btc bt_info actions-simple" data-href="./main.php?p=2040101">
+            <a class="btc bt_info actions-simple" data-href="./main.get.php?p=2040101">
                 {t}Split chart{/t}
             </a>
             {/if}
             {if $topologyAccess.2040102 || $admin == 1}
-            <a href="#" class="btc bt_info actions-simple" data-href="./main.php?p=2040102">
+            <a class="btc bt_info actions-simple" data-href="./main.get.php?p=2040102">
                 {t}Display multiple periods{/t}
             </a>
             {/if}
             {literal}
-            <a class="actions" href="#" data-href="./include/views/graphs/generateGraphs/generateImage.php">
+            <a class="actions" data-href="./include/views/graphs/generateGraphs/generateImage.php">
                 <img alt="Export graph" src="./img/icons/picture.png" class="ico-18 margin_right">
             </a>
-            <a class="actions" href="#" data-href="./include/views/graphs/exportData/ExportCSVServiceData.php">
+            <a class="actions" data-href="./include/views/graphs/exportData/ExportCSVServiceData.php">
                 <img alt="Export CSV" src="./img/icons/csv.png" class="ico-18 margin_right">
             </a>
         </div>
